Fix test using JDK16 toList